# aboutlife

./: .gitignore  IDEAS  IDEAS.md  Makefile  README.md  default.nix  pyproject.toml  service.nix  shell.nix  unkillall_process.sh
aboutlife/: __main__.py  context.py  daemon.py  main.py  plugin.py  utils.py
aboutlife-webext/: main.js  manifest.json  options.html  options.js  package.json
aboutlife/common/: misc.py  obscure_process.py  scaled_image.py
aboutlife/launcher/: launcher.py
aboutlife/networkmanager/: internet_block.sh  internet_unblock.sh  watcher.py
aboutlife/overlay/: client.py  custom.css  overlay.py  ui.glade  watcher.py
aboutlife/overlay/feed/: __init__.py  common.py  images.py  quotes.py  quotes.txt
aboutlife/overlay/imagefeed/: __init__.py  daily.py  image_feed.py  images.txt  unsplash-collection-fetcher.py
aboutlife/overlay/tasklog/: __init__.py  fileio.py  tasklog.py
aboutlife/rest/: endpoints.py  handler.py  rest.py
aboutlife/sticky/: sticky.py  ui.glade  watcher.py
aboutlife/tray/: tray.py
docs/: paths.md  rest.md  structure.md
docs/bruno/: bruno.json  close_tabs.bru  close_tabs_query.bru  close_tabs_reset.bru  daemon_present.bru  nsplash.bru  shutdown_system.bru  start_tomato_break.bru  start_work_session.bru  state.bru
tests/: test_context.py
tests/overlay/: test_client.py
