[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aboutlife"
version = "0.0.1"
description = "Computer usage regulation tool"
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
    "python-xlib"
]

[project.scripts]
aboutlife="aboutlife.__main__:main"
